--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
   "extends": "airbnb-base",
+  "env": {
+    "browser": false,
+    "node": true
+  },
   "rules": {
+    "indent": [2, 2],
     "semi": ["warning", "never"]
   }
 }
