--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
   },
   "rules": {
     "indent": [2, 2],
-    "semi": ["warning", "never"]
+    "semi": [1, "never"],
+    "arrow-parens": "off",
+    "camelcase": "off"
   }
 }
